{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 65,
  "lineage": "dd70f321-662c-71fe-6518-6c445d8049e0",
  "resources": [
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2202cf4c36161a1",
            "arn": "arn:aws:ec2:eu-west-1:296274010522:instance/i-01d37a03f17d3c2af",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01d37a03f17d3c2af",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f09f962983400784",
            "private_dns": "ip-10-0-1-34.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.34",
            "public_ip": "3.250.22.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06d15f6e301b44b58",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01482df7c920692aa",
            "tags": {
              "Name": "nqs-bastion-instance"
            },
            "tags_all": {
              "Name": "nqs-bastion-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03e6cac1ca2943b45"
            ]
          },
          "dependencies": [
            "module.resources.aws_key_pair.key_pair",
            "module.resources.aws_security_group.bastion_sg",
            "module.resources.aws_subnet.public_sub",
            "module.resources.aws_vpc.custom_vpc",
            "module.resources.tls_private_key.rsa_4096"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2202cf4c36161a1",
            "arn": "arn:aws:ec2:eu-west-1:296274010522:instance/i-0c91467170e3bdc13",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c91467170e3bdc13",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-030ddde2782b83961",
            "private_dns": "ip-10-0-2-175.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.175",
            "public_ip": "3.249.122.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0aee9b917b99300d0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0df591fc7fbf20f1c",
            "tags": {
              "Name": "nqs-priv-instance"
            },
            "tags_all": {
              "Name": "nqs-priv-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e08af8f37f3fe9b8"
            ]
          },
          "dependencies": [
            "module.resources.aws_key_pair.key_pair",
            "module.resources.aws_security_group.bastion_sg",
            "module.resources.aws_security_group.custom_sg_private",
            "module.resources.aws_subnet.private_sub",
            "module.resources.aws_vpc.custom_vpc",
            "module.resources.tls_private_key.rsa_4096"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2202cf4c36161a1",
            "arn": "arn:aws:ec2:eu-west-1:296274010522:instance/i-05dc003c41684a7c4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05dc003c41684a7c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06e457432bff0cf20",
            "private_dns": "ip-10-0-1-208.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.208",
            "public_ip": "54.247.9.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07d5f10237115f29b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01482df7c920692aa",
            "tags": {
              "Name": "nqs-pub-instance"
            },
            "tags_all": {
              "Name": "nqs-pub-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d30b593ff30dcf75"
            ]
          },
          "dependencies": [
            "module.resources.aws_key_pair.key_pair",
            "module.resources.aws_security_group.custom_sg",
            "module.resources.aws_subnet.public_sub",
            "module.resources.aws_vpc.custom_vpc",
            "module.resources.tls_private_key.rsa_4096"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:internet-gateway/igw-02cd018ece69702bb",
            "id": "igw-02cd018ece69702bb",
            "owner_id": "296274010522",
            "tags": {
              "Name": "nqs-internet-gateway"
            },
            "tags_all": {
              "Name": "nqs-internet-gateway"
            },
            "vpc_id": "vpc-0fb6da66f3d212b1a"
          },
          "dependencies": [
            "module.resources.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "custom_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:route-table/rtb-06add4b7004adcfa8",
            "id": "rtb-06add4b7004adcfa8",
            "owner_id": "296274010522",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02cd018ece69702bb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nqs-public-rt"
            },
            "tags_all": {
              "Name": "nqs-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb6da66f3d212b1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_internet_gateway.igw",
            "module.resources.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "custom_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fab7be9ea87280d7",
            "route_table_id": "rtb-06add4b7004adcfa8",
            "subnet_id": "subnet-01482df7c920692aa"
          },
          "dependencies": [
            "module.resources.aws_internet_gateway.igw",
            "module.resources.aws_route_table.custom_route_table",
            "module.resources.aws_subnet.public_sub",
            "module.resources.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:security-group/sg-03e6cac1ca2943b45",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e6cac1ca2943b45",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240813083111637000000001",
            "name_prefix": "terraform-",
            "owner_id": "296274010522",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nqs-security-group-bastion"
            },
            "tags_all": {
              "Name": "nqs-security-group-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb6da66f3d212b1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "custom_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:security-group/sg-0d30b593ff30dcf75",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d30b593ff30dcf75",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240813083111637000000002",
            "name_prefix": "terraform-",
            "owner_id": "296274010522",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nqs-security-group"
            },
            "tags_all": {
              "Name": "nqs-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb6da66f3d212b1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "custom_sg_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:security-group/sg-0e08af8f37f3fe9b8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e08af8f37f3fe9b8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03e6cac1ca2943b45"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240813083115931800000004",
            "name_prefix": "terraform-",
            "owner_id": "296274010522",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nqs-security-group-private"
            },
            "tags_all": {
              "Name": "nqs-security-group-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb6da66f3d212b1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_security_group.bastion_sg",
            "module.resources.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:subnet/subnet-0df591fc7fbf20f1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df591fc7fbf20f1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296274010522",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nqs-private-subnet"
            },
            "tags_all": {
              "Name": "nqs-private-subnet"
            },
            "vpc_id": "vpc-0fb6da66f3d212b1a"
          },
          "dependencies": [
            "module.resources.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:subnet/subnet-01482df7c920692aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01482df7c920692aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296274010522",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nqs-public-subnet"
            },
            "tags_all": {
              "Name": "nqs-public-subnet"
            },
            "vpc_id": "vpc-0fb6da66f3d212b1a"
          },
          "dependencies": [
            "module.resources.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:vpc/vpc-0fb6da66f3d212b1a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aa479058b0a98703",
            "default_route_table_id": "rtb-000a31906fa3fdf61",
            "default_security_group_id": "sg-01d61093907cf55dc",
            "dhcp_options_id": "dopt-0f1ce26971dcd0ae2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fb6da66f3d212b1a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-000a31906fa3fdf61",
            "owner_id": "296274010522",
            "tags": {
              "Name": "nqs-custom-vpc"
            },
            "tags_all": {
              "Name": "nqs-custom-vpc"
            }
          }
        }
      ]
    }
  ]
}